# eventstudy

./: CITATION.cff  LICENSE  Makefile  README.md  df.dta  eventbaseline.ado  eventbaseline.pkg  eventbaseline.sthlp  eventstudy.ado  eventstudy.pkg  eventstudy.sthlp  example.do  files.txt  packager.py  pyproject.toml  stata.toc  testdata.dta
